[gd_scene load_steps=7 format=3 uid="uid://v43y4cnmmw7w"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/RootsEditorModal/RootsEditor/RootsEditor.gd" id="1_6t4gh"]
[ext_resource type="StyleBox" uid="uid://hurrkbbuo82n" path="res://addons/DialogHelperTool/Tool/RootsEditorModal/RootsEditor/item_normal.tres" id="2_iadgo"]
[ext_resource type="StyleBox" uid="uid://bnavcqcc6ujvb" path="res://addons/DialogHelperTool/Tool/RootsEditorModal/RootsEditor/item_focus.tres" id="3_tkanl"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/RootsEditorModal/RootsEditor/RootItem.gd" id="4_86v38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3halw"]
bg_color = Color(0.2, 0.207843, 0.239216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvmmu"]
bg_color = Color(0.168627, 0.168627, 0.180392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
shadow_size = 4

[node name="RootsEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6t4gh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3halw")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="RootItem" type="LineEdit" parent="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("2_iadgo")
theme_override_styles/focus = ExtResource("3_tkanl")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jvmmu")
text = "/."
script = ExtResource("4_86v38")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="AddRootButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "ADD"

[node name="RemoveRootButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "REMOVE"

[connection signal="focus_entered" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/RootItem" to="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/RootItem" method="_on_focus_entered"]
[connection signal="selected" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/RootItem" to="." method="_on_root_item_selected"]
[connection signal="text_changed" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/RootItem" to="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/RootItem" method="_on_root_item_text_changed"]
[connection signal="text_update" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/RootItem" to="." method="_on_root_item_text_update"]
[connection signal="focus_entered" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25741" to="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25741" method="_on_focus_entered"]
[connection signal="selected" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25741" to="." method="_on_root_item_selected"]
[connection signal="text_changed" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25741" to="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25741" method="_on_root_item_text_changed"]
[connection signal="text_update" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25741" to="." method="_on_root_item_text_update"]
[connection signal="focus_entered" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25742" to="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25742" method="_on_focus_entered"]
[connection signal="selected" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25742" to="." method="_on_root_item_selected"]
[connection signal="text_changed" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25742" to="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25742" method="_on_root_item_text_changed"]
[connection signal="text_update" from="MarginContainer/Panel/VBoxContainer/ScrollContainer/VBoxContainer/@LineEdit@25742" to="." method="_on_root_item_text_update"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/AddRootButton" to="." method="_on_add_root_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/RemoveRootButton" to="." method="_on_remove_root_button_pressed"]
